@@ -6,6 +6,7 @@
 -Added command to set playback modifiers - "/mocap playback modifiers".
 -Added command to clear server and clients mocap cache - "/mocap misc clear_cache".
 -Added support for custom NBT data with "player_as_entity" modifier.
+-Added player chat messages recording and associated with it settings: "chat_recording" (false by default) and "chat_playback" (true by default).
 -Added "scale" playback modifier (thanks to netcore10 for suggestion).
 -Added "entity_filter" playback modifier.
 -Added setting "allow_ghosts" which enables usage of ghost players when using a "player_as_entity" modifier (true by default).
